Sat Nov 9 16:25:57 2013 -0600 93d1020 (HEAD, origin/develop, release/0.5, develop) Finish 37-render-fibre-wire  [hunterboerner]
Sat Nov 9 16:25:48 2013 -0600 eacfd73 register, stuff, it works, who cares. @LordFokas. Tanks for le kode. FIxes #37  [hunterboerner]
Sat Nov 9 15:36:35 2013 -0600 641d39c that's never used  [hunterboerner]
Sat Nov 9 15:08:11 2013 -0600 558eb6d go away comment  [hunterboerner]
Sat Nov 9 14:53:05 2013 -0600 4164a40 -.- @LordFokas, why did you not see that? :( I feel stupid  [hunterboerner]
Thu Nov 7 15:52:39 2013 -0600 c6f7a7b work?  [hunterboerner]
Thu Nov 7 15:52:31 2013 -0600 53c7151 Fiber not tube  [hunterboerner]
Thu Nov 7 12:04:17 2013 -0600 c643058 moar wark  [hunterboerner]
Thu Nov 7 12:01:38 2013 -0600 c856106 a lawt of work  [hunterboerner]
Thu Nov 7 11:32:43 2013 -0600 d5e90c4 weird  [hunterboerner]
Wed Nov 6 11:43:43 2013 -0600 7bcc332 ion no longer beta!  [hunterboerner]
Tue Nov 5 13:10:54 2013 -0600 64d7bd7 change to that fixes #94  [hunterboerner]
Tue Nov 5 13:07:16 2013 -0600 1e4a6be new funnylooking ingot  [hunterboerner]
Tue Nov 5 12:25:39 2013 -0600 ffa41d5 derp  [hunterboerner]
Tue Nov 5 12:24:17 2013 -0600 df1e1b2 IOF textures  [hunterboerner]
Tue Nov 5 12:07:54 2013 -0600 bf2ee05 colorfulingotandyesIknowitsactualyunbiobutrainbowsarefreakingawesome  [hunterboerner]
Mon Nov 4 13:15:59 2013 -0600 7af68c6 forgot the tab  [hunterboerner]
Mon Nov 4 13:13:54 2013 -0600 e5c2726 alex you broke it  [hunterboerner]
Mon Nov 4 13:11:59 2013 -0600 6fb7481 it kinda works!  [hunterboerner]
Mon Nov 4 13:10:11 2013 -0600 d0ddac7 that was counterintuitivethingyicantspell  [hunterboerner]
Mon Nov 4 13:00:23 2013 -0600 d28a7bf fixes #91  [hunterboerner]
Mon Nov 4 12:51:45 2013 -0600 97957b6 y u break mc! oh wait that was me  [hunterboerner]
Sun Nov 3 16:01:38 2013 -0600 0d70b0a location cards are also beta because there's no use for them  [hunterboerner]
Sun Nov 3 15:58:57 2013 -0600 f3984eb move that to "beta"  [hunterboerner]